--- a/package.json
+++ b/package.json
@@ -5,14 +5,18 @@
   "author": "Jay Gurav <mrithyunjay2799@gmail.com> (http://github.com/JayMGurav)",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon src/index.js",
-    "start": "node src/index.js"
+    "dev": "nodemon -r esm src/index.js",
+    "start": "node -r esm src/index.js"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
   },
   "dependencies": {
+    "@graphql-tools/merge": "^6.2.13",
     "apollo-server": "^2.24.0",
-    "graphql": "^15.5.0"
+    "dotenv": "^8.2.0",
+    "esm": "^3.2.25",
+    "graphql": "^15.5.0",
+    "mongoose": "^5.12.7"
   }
 }
