--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
     "esm": "^3.2.25",
     "graphql": "^15.5.0",
     "mongoose": "^5.12.7"
+  },
+  "engines": {
+    "node": "14.x",
+    "npm": "6.14.7"
   }
 }
